fixed width of main container for better component alignment

--- a/src/main/resources/webresources/styles.css
+++ b/src/main/resources/webresources/styles.css
@@ -30,6 +30,8 @@ th {
 	padding: 10px;
 	text-align: center;
 	background: #333;
+	max-width: 1200px;
+	margin: 0 auto;
 }
 
 #statuscontainer {
